# P.I

./: .gitignore  Anderson  Daniel.txt  README.md  db.sqlite3  env  manage.py  proposta1-vini.md  pyproject.toml
AgendaBarbeiro/: asgi.py  settings.py  urls.py  wsgi.py
arquivocs/: serializers.py  urls.py  views.py
auth/: models.py
booking/: admin.py  models.py  serializer.py  views.py
booking/migrations/: 0001_initial.py  0002_initial.py  0003_rename_scheduled_date_booking_date_and_more.py  0004_rename_date_booking_date_shedule_and_more.py  0005_alter_booking_time_required.py  0006_alter_booking_unique_together.py  0007_alter_booking_end_booking_and_more.py
clientuser/: admin.py  models.py  serializer.py  views.py
clientuser/migrations/: 0001_initial.py
collaborator_user/: admin.py  apps.py  models.py  serializer.py  views.py
collaborator_user/migrations/: 0001_initial.py  0002_alter_saloncollaborator_status.py
core/: models.py
ideias/: proposta1-devmarcs.md  proposta2-vini.md
my_auth/: admin.py  models.py  views.py
my_auth/migrations/: 0001_initial.py
promotion/: admin.py  models.py  views.py
promotion/migrations/: 0001_initial.py
salon/: admin.py  models.py  serializer.py  views.py
salon/migrations/: 0001_initial.py  0002_favorite.py
schedule/: admin.py  models.py  serializer.py  utils.py  views.py
schedule/migrations/: 0001_initial.py  0002_alter_schedule_collaborator_user_and_more.py  0003_alter_schedule_options.py
service/: admin.py  models.py  serializer.py  views.py
user/: admin.py  models.py
(+4 files in other folders)
